# rust_stm32f103c6t6_starter

./: Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
src/: main.rs
